Add Live Preview.

--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,8 @@ dist
 dist-ssr
 *.local
 
-test-results/*
-coverage/*
+test-results
+coverage
 playwright-report/*
 # Editor directories and files
 .vscode/*
